# opencv-face-detection

./: .project
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/io/danbogh/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_utils.cpp  scanner.cpp  smart_cropper.cpp
app/src/main/cpp/include/: android_utils.h  scanner.h
app/src/main/java/io/danbogh/facedetection/: MainActivity.java  SmartCropper.java  Utils.java
app/src/main/jniLibs/include/opencv2/: core.hpp  imgproc.hpp  opencv.hpp
app/src/main/jniLibs/include/opencv2/core/: affine.hpp  base.hpp  core_c.h  cuda.hpp  cvdef.h  cvstd.hpp  eigen.hpp  fast_math.hpp  mat.hpp  matx.hpp  ocl.hpp  opengl.hpp  optim.hpp  persistence.hpp  private.cuda.hpp  private.hpp  saturate.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp  wimage.hpp
app/src/main/jniLibs/include/opencv2/core/cuda/: scan.hpp
app/src/main/jniLibs/include/opencv2/core/hal/: hal.hpp  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp
app/src/main/jniLibs/include/opencv2/imgproc/: imgproc_c.h  types_c.h
app/src/main/jniLibs/include/opencv2/imgproc/hal/: hal.hpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/danbogh/facedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
